# liqueur

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DONE.md  LICENSE  PHASE2_SUMMARY.md  PROJECT_ESSENCE.md  README.md  SECURITY.md  STATUS_REPORT.md  demo-react-render.tsx  demo-test.ts  package.json  playwright.config.ts  pnpm-lock.yaml  todo.md  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.claude/: DEVELOPMENT_STRATEGY.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  RALPH_LOOP_COMPLETION_REPORT.md  ralph-loop.local.md
.github/workflows/: quality-gate.yml  test-rust.yml  test-ts.yml
crates/liquid-protocol/: Cargo.toml
crates/liquid-protocol/src/: lib.rs  schema.rs  validator.rs
crates/liquid-protocol/tests/: validator_test.rs
crates/liquid-reinhardt/: Cargo.toml
crates/liquid-reinhardt/src/: converter.rs  lib.rs  security.rs
crates/liquid-reinhardt/tests/: converter_coverage_test.rs  converter_test.rs  security_test.rs
docs/: Liquid Architecture Philosophy.md  Liquid Layer Requirements.md  PROJECT-COMPLETION.md  Phase3-Refactoring-Spec.md  Project-Completion-Final.md  README.en.md  getting-started.md  phase1-completion-summary.md
docs/architecture/: layer-requirements.md  overview.md  project-proposal.md  protocol-spec.md  security-model.md
docs/development/: api-spec-test.md  contributing.md  phase2-completion-report-final.md  phase2-completion-report.md  phase2-plan.md  project-completion-report.md  tdd-guide.md
docs/guides/: household-budget-app.md
docs/philosophy/: why-liquid.md
docs/readmeLangs/: README.ar.md  README.fa.md  README.ja.md  README.ru.md  README.uk.md  README.zh-CN.md  README.zh-TW.md
docs/status/: PHASE2-COMPLETION.md  PHASE_3_4_COMPLETION_STATUS.md  PHASE_5_6_7_8_SUMMARY.md  Phase3-Final-Report.md  (+7 more)
(+73 files in other folders)
