[workspace]
members = [
    "crates/liquid-protocol",
    "crates/liquid-reinhardt"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[workspace.dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
