[workspace]
resolver = "2"
members = [
    "crates/liquid-protocol",
    "crates/liquid-reinhardt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Project Liquid Contributors"]
license = "MIT"
repository = "https://github.com/ablaze/liqueur"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
