[package]
name = "liquid-protocol"
version = "0.1.0"
edition = "2021"
description = "Liquid Protocol - Rust Serde構造体とバリデーター"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
